Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-19284

Crash with "become last sibling"

XMLWordPrintable

    • 17b761ce86e9fdfadff49b35858533d06ba0d05b

      • create a "Qt Quick Application - Scroll"
      • open main.qml in Qt Quick Designer
      • switch to integrated text editor
      • set cursor on the line with "model: 20"
      • click the left arrow "Become last sibling" in navigator view
      Thread 0 Crashed:: Dispatch queue: com.apple.main-thread
      0 libsystem_kernel.dylib 0x0000000108296d42 __pthread_kill + 10
      1 libsystem_pthread.dylib 0x00007fff96e3b457 pthread_kill + 90
      2 libsystem_c.dylib 0x00007fff96cb3420 abort + 129
      3 org.qt-project.QtCore 0x0000000107a73de9 qt_message_fatal(QtMsgType, QMessageLogContext const&, QString const&) + 9
      4 org.qt-project.QtCore 0x0000000107a757b7 QMessageLogger::fatal(char const*, ...) const + 231
      5 org.qt-project.QtCore 0x0000000107a70575 qt_assert(char const*, char const*, int) + 69
      6 libQmlDesigner_debug.dylib 0x000000011ea39645 QmlDesigner::Internal::ModelValidator::bindingExpressionsDiffer(QmlDesigner::BindingProperty&, QString const&, QByteArray const&) + 85 (texttomodelmerger.cpp:1577)
      7 libQmlDesigner_debug.dylib 0x000000011ea35dfd QmlDesigner::Internal::TextToModelMerger::syncExpressionProperty(QmlDesigner::AbstractProperty&, QString const&, QByteArray const&, QmlDesigner::Internal::DifferenceHandler&) + 429 (texttomodelmerger.cpp:1385)
      8 libQmlDesigner_debug.dylib 0x000000011ea352e2 QmlDesigner::Internal::TextToModelMerger::syncScriptBinding(QmlDesigner::ModelNode&, QString const&, QmlJS::AST::UiScriptBinding*, QmlDesigner::Internal::ReadingContext*, QmlDesigner::Internal::DifferenceHandler&) + 4050 (texttomodelmerger.cpp:1310)
      9 libQmlDesigner_debug.dylib 0x000000011ea30816 QmlDesigner::Internal::TextToModelMerger::syncNode(QmlDesigner::ModelNode&, QmlJS::AST::UiObjectMember*, QmlDesigner::Internal::ReadingContext*, QmlDesigner::Internal::DifferenceHandler&) + 6534 (texttomodelmerger.cpp:1126)
      10 libQmlDesigner_debug.dylib 0x000000011ea35fd1 QmlDesigner::Internal::TextToModelMerger::syncNodeListProperty(QmlDesigner::NodeListProperty&, QList<QmlJS::AST::UiObjectMember*>, QmlDesigner::Internal::ReadingContext*, QmlDesigner::Internal::DifferenceHandler&) + 273 (texttomodelmerger.cpp:1474)
      11 libQmlDesigner_debug.dylib 0x000000011ea3134a QmlDesigner::Internal::TextToModelMerger::syncNode(QmlDesigner::ModelNode&, QmlJS::AST::UiObjectMember*, QmlDesigner::Internal::ReadingContext*, QmlDesigner::Internal::DifferenceHandler&) + 9402 (texttomodelmerger.cpp:1175)
      12 libQmlDesigner_debug.dylib 0x000000011ea2d14d QmlDesigner::Internal::TextToModelMerger::load(QString const&, QmlDesigner::Internal::DifferenceHandler&) + 3069 (texttomodelmerger.cpp:980)
      13 libQmlDesigner_debug.dylib 0x000000011e99634b QmlDesigner::RewriterView::qmlTextChanged() + 251 (rewriterview.cpp:796)
      14 libQmlDesigner_debug.dylib 0x000000011e99b0ae QtPrivate::FunctorCall<QtPrivate::IndexesList<>, QtPrivate::List<>, void, void (QmlDesigner::RewriterView::*)()>::call(void (QmlDesigner::RewriterView::*)(), QmlDesigner::RewriterView*, void**) + 126 (qobjectdefs_impl.h:136)
      15 libQmlDesigner_debug.dylib 0x000000011e99b003 void QtPrivate::FunctionPointer<void (QmlDesigner::RewriterView::*)()>::call<QtPrivate::List<>, void>(void (QmlDesigner::RewriterView::*)(), QmlDesigner::RewriterView*, void**) + 99 (qobjectdefs_impl.h:170)
      16 libQmlDesigner_debug.dylib 0x000000011e99af16 QtPrivate::QSlotObject<void (QmlDesigner::RewriterView::*)(), QtPrivate::List<>, void>::impl(int, QtPrivate::QSlotObjectBase*, QObject*, void**, bool*) + 166 (qobject_impl.h:121)
      17 org.qt-project.QtCore 0x0000000107c819fb QMetaObject::activate(QObject*, int, int, void**) + 731
      18 libQmlDesigner_debug.dylib 0x000000011ec452a2 QmlDesigner::TextModifier::textChanged() + 34 (moc_textmodifier.cpp:156)
      19 libQmlDesigner_debug.dylib 0x000000011ea47d22 QmlDesigner::PlainTextEditModifier::reactivateChangeSignals() + 50 (plaintexteditmodifier.cpp:189)
      20 libQmlDesigner_debug.dylib 0x000000011ea2454d QmlDesigner::Internal::ModelToTextMerger::applyChanges() + 2621 (modeltotextmerger.cpp:295)
      21 libQmlDesigner_debug.dylib 0x000000011e993f0d QmlDesigner::RewriterView::applyChanges() + 797 (rewriterview.cpp:403)
      22 libQmlDesigner_debug.dylib 0x000000011e9955f9 QmlDesigner::RewriterView::nodeReparented(QmlDesigner::ModelNode const&, QmlDesigner::NodeAbstractProperty const&, QmlDesigner::NodeAbstractProperty const&, QFlags<QmlDesigner::AbstractView::PropertyChangeFlag>) + 185 (rewriterview.cpp:217)
      23 libQmlDesigner_debug.dylib 0x000000011e9e2493 QmlDesigner::Internal::ModelPrivate::notifyNodeReparent(QSharedPointer<QmlDesigner::Internal::InternalNode> const&, QSharedPointer<QmlDesigner::Internal::InternalNodeAbstractProperty> const&, QSharedPointer<QmlDesigner::Internal::InternalNode> const&, QByteArray const&, QFlags<QmlDesigner::AbstractView::PropertyChangeFlag>) + 851 (model.cpp:1321)
      24 libQmlDesigner_debug.dylib 0x000000011e9e5ee2 QmlDesigner::Internal::ModelPrivate::reparentNode(QSharedPointer<QmlDesigner::Internal::InternalNode> const&, QByteArray const&, QSharedPointer<QmlDesigner::Internal::InternalNode> const&, bool, QByteArray const&) + 1122 (model.cpp:1649)
      25 libQmlDesigner_debug.dylib 0x000000011ea1ebc1 QmlDesigner::NodeAbstractProperty::reparentHere(QmlDesigner::ModelNode const&, bool, QByteArray const&) + 3425 (nodeabstractproperty.cpp:94)
      26 libQmlDesigner_debug.dylib 0x000000011ea1dd9f QmlDesigner::NodeAbstractProperty::reparentHere(QmlDesigner::ModelNode const&) + 991 (nodeabstractproperty.cpp:61)
      27 libQmlDesigner_debug.dylib 0x000000011ebc7011 QmlDesigner::NavigatorView::leftButtonClicked() + 785 (navigatorview.cpp:330)
      28 libQmlDesigner_debug.dylib 0x000000011ebcc52e QtPrivate::FunctorCall<QtPrivate::IndexesList<>, QtPrivate::List<>, void, void (QmlDesigner::NavigatorView::*)()>::call(void (QmlDesigner::NavigatorView::*)(), QmlDesigner::NavigatorView*, void**) + 126 (qobjectdefs_impl.h:136)
      29 libQmlDesigner_debug.dylib 0x000000011ebcc483 void QtPrivate::FunctionPointer<void (QmlDesigner::NavigatorView::*)()>::call<QtPrivate::List<>, void>(void (QmlDesigner::NavigatorView::*)(), QmlDesigner::NavigatorView*, void**) + 99 (qobjectdefs_impl.h:170)
      30 libQmlDesigner_debug.dylib 0x000000011ebcc396 QtPrivate::QSlotObject<void (QmlDesigner::NavigatorView::*)(), QtPrivate::List<>, void>::impl(int, QtPrivate::QSlotObjectBase*, QObject*, void**, bool*) + 166 (qobject_impl.h:121)
      31 org.qt-project.QtCore 0x0000000107c819fb QMetaObject::activate(QObject*, int, int, void**) + 731
      32 libQmlDesigner_debug.dylib 0x000000011ec53742 QmlDesigner::NavigatorWidget::leftButtonClicked() + 34 (moc_navigatorwidget.cpp:174)
      33 libQmlDesigner_debug.dylib 0x000000011ebd781e QtPrivate::FunctorCall<QtPrivate::IndexesList<>, QtPrivate::List<>, void, void (QmlDesigner::NavigatorWidget::*)()>::call(void (QmlDesigner::NavigatorWidget::*)(), QmlDesigner::NavigatorWidget*, void**) + 126 (qobjectdefs_impl.h:136)
      34 libQmlDesigner_debug.dylib 0x000000011ebd7773 void QtPrivate::FunctionPointer<void (QmlDesigner::NavigatorWidget::*)()>::call<QtPrivate::List<>, void>(void (QmlDesigner::NavigatorWidget::*)(), QmlDesigner::NavigatorWidget*, void**) + 99 (qobjectdefs_impl.h:170)
      35 libQmlDesigner_debug.dylib 0x000000011ebd7686 QtPrivate::QSlotObject<void (QmlDesigner::NavigatorWidget::*)(), QtPrivate::List<>, void>::impl(int, QtPrivate::QSlotObjectBase*, QObject*, void**, bool*) + 166 (qobject_impl.h:121)
      36 org.qt-project.QtCore 0x0000000107c819fb QMetaObject::activate(QObject*, int, int, void**) + 731
      37 org.qt-project.QtWidgets 0x00000001070a1730 QAbstractButtonPrivate::emitClicked() + 112
      38 org.qt-project.QtWidgets 0x00000001070a15bf QAbstractButtonPrivate::click() + 255
      39 org.qt-project.QtCore 0x0000000107c7aad0 QObject::event(QEvent*) + 48
      40 org.qt-project.QtWidgets 0x0000000106fd778c QWidget::event(QEvent*) + 4300
      41 org.qt-project.QtWidgets 0x00000001070a23af QAbstractButton::event(QEvent*) + 175
      42 org.qt-project.QtWidgets 0x0000000107187303 QToolButton::event(QEvent*) + 323
      43 org.qt-project.QtWidgets 0x0000000106f9ebad QApplicationPrivate::notify_helper(QObject*, QEvent*) + 269
      44 org.qt-project.QtWidgets 0x0000000106fa147c QApplication::notify(QObject*, QEvent*) + 5852
      45 org.qt-project.QtCore 0x0000000107c50a24 QCoreApplication::notifyInternal2(QObject*, QEvent*) + 164
      46 org.qt-project.QtCore 0x0000000107ca8246 QTimerInfoList::activateTimers() + 1142
      47 libqcocoa.dylib 0x000000010b728d12 QCocoaEventDispatcherPrivate::activateTimersSourceCallback(void*) + 18
      48 com.apple.CoreFoundation 0x00007fff814b7321 __CFRUNLOOP_IS_CALLING_OUT_TO_A_SOURCE0_PERFORM_FUNCTION__ + 17
      49 com.apple.CoreFoundation 0x00007fff8149821d __CFRunLoopDoSources0 + 557
      50 com.apple.CoreFoundation 0x00007fff81497716 __CFRunLoopRun + 934
      51 com.apple.CoreFoundation 0x00007fff81497114 CFRunLoopRunSpecific + 420
      52 com.apple.HIToolbox 0x00007fff809f7ebc RunCurrentEventLoopInMode + 240
      53 com.apple.HIToolbox 0x00007fff809f7cf1 ReceiveNextEventCommon + 432
      54 com.apple.HIToolbox 0x00007fff809f7b26 _BlockUntilNextEventMatchingListInModeWithFilter + 71
      55 com.apple.AppKit 0x00007fff7ef90a54 _DPSNextEvent + 1120
      56 com.apple.AppKit 0x00007fff7f70c7ee -[NSApplication(NSEvent) _nextEventMatchingEventMask:untilDate:inMode:dequeue:] + 2796
      57 com.apple.AppKit 0x00007fff7ef853db -[NSApplication run] + 926
      58 libqcocoa.dylib 0x000000010b72991a QCocoaEventDispatcher::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) + 2186
      59 org.qt-project.QtCore 0x0000000107c4c661 QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) + 401
      60 org.qt-project.QtCore 0x0000000107c510c9 QCoreApplication::exec() + 393
      61 org.qt-project.qtcreator 0x00000001069ba887 main + 12871 (main.cpp:537)
      62 libdyld.dylib 0x000000010826f235 start + 1

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            thohartm Thomas Hartmann
            con Eike Ziller
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes